[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-inbox-ops"
version = "0.1.0"
description = "OpenEnv customer support triage environment with typed APIs, graders, and baseline."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Neeraj Koushik" }
]
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "pydantic==2.11.7",
  "pyyaml==6.0.2",
  "httpx==0.28.1",
  "openenv-core>=0.2.0",
  "openai>=2.7.2",
  "pytest==8.4.1"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["app", "server"]
